src/Components/DisplayEntries/DisplayEntries.scss
.entry {
  margin-top: 20px;
  margin-bottom: 20px;

  h3 {
    font-size: 0.35rem;
    margin-bottom: 10px;
  }

  p {
    font-size: 0.25rem;
    margin-bottom: 5px;
  }
}

.wrapper-entries {
  padding: 0px 10px;
}

.center {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  align-items: center;
  top: 5vh;
  left: 70vw;
  height: 60px;
  width: 28vw;
  background: rgba(255, 253, 253, 0.814);
  border-radius: 30px;
  overflow-y: scroll;
}
.center::-webkit-scrollbar {
  display: none;
}

